Create minimal Account API
